--- a/prototype/frontend/package.json
+++ b/prototype/frontend/package.json
@@ -9,8 +9,10 @@
 	},
 	"dependencies": {
 		"axios": "^0.26.1",
+		"chart.js": "^3.7.1",
 		"pinia": "^2.0.12",
 		"vue": "^3.2.31",
+		"vue-chart-3": "^3.1.8",
 		"vue-cookies": "^1.7.4",
 		"vue-router": "^4.0.14",
 		"vue-toastification": "^2.0.0-rc.5"
