--- a/prototype/frontend/tsconfig.json
+++ b/prototype/frontend/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"compilerOptions": {
-		"target": "esnext",
-		"module": "esnext",
-		"lib": ["esnext", "dom"],
+		"target": "ES2020",
+		"module": "ES2020",
+		"lib": ["ES2020", "dom"],
 		"jsx": "preserve",
 		"moduleResolution": "node",
 		"strict": true,
@@ -21,7 +21,7 @@
 			"@/*": ["src/*"]
 		}
 	},
-	"include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "components.d.ts", "auto-imports.d.ts"],
+	"include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "components.d.ts"],
 	"references": [{ "path": "./tsconfig.node.json" }],
 	"exclude": ["node_modules"]
 }
