--- a/prototype/frontend2/package.json
+++ b/prototype/frontend2/package.json
@@ -1,13 +1,14 @@
 {
-	"name": "frontend",
-	"version": "0.0.0",
-	"scripts": {
-		"dev": "vite",
-		"build": "vue-tsc --noEmit && vite build",
-		"preview": "vite preview",
-		"fmt": "prettier --write ."
-	},
-	"dependencies": {
+  "name": "frontend2",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
 		"axios": "^1.3.1",
 		"chart.js": "^4.2.0",
 		"pinia": "^2.0.30",
@@ -24,7 +25,6 @@
 		"vite": "^4.1.1",
 		"vite-plugin-windicss": "^1.8.10",
 		"vue-tsc": "^1.0.24",
-		"tailwindcss": "^3.2.4",
 		"windicss": "^3.5.6"
-	}
+  }
 }
