--- a/prototype/frontend/tsconfig.json
+++ b/prototype/frontend/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"compilerOptions": {
-		"target": "ES2020",
-		"module": "ES2020",
-		"lib": ["ES2020", "dom"],
+		"target": "esnext",
+		"module": "esnext",
+		"lib": ["esnext", "dom"],
 		"jsx": "preserve",
 		"moduleResolution": "node",
 		"strict": true,
