--- a/prototype/frontend/package.json
+++ b/prototype/frontend/package.json
@@ -12,13 +12,14 @@
 		"chart.js": "^4.2.0",
 		"pinia": "^2.0.30",
 		"vue": "^3.2.47",
+		"vue-chartjs": "^5.2.0",
 		"vue-cookies": "^1.8.2",
 		"vue-router": "^4.1.6",
 		"vue-toastification": "^2.0.0-rc.5"
 	},
 	"devDependencies": {
-		"@vitejs/plugin-vue": "^4.0.0",
 		"@types/node": "18.11.18",
+		"@vitejs/plugin-vue": "^4.0.0",
 		"typescript": "4.9.5",
 		"unplugin-vue-components": "^0.23.0",
 		"vite": "^4.1.1",
