--- a/prototype/backend/package.json
+++ b/prototype/backend/package.json
@@ -5,35 +5,36 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "nodemon ./src/main.ts",
+		"build": "tsc -p .",
 		"fmt": "prettier --write ."
 	},
 	"dependencies": {
-		"axios": "^0.27.2",
-		"bcrypt": "^5.0.1",
+		"axios": "^1.3.4",
+		"bcrypt": "^5.1.0",
 		"connect-mongo": "^4.6.0",
 		"cors": "2.8.5",
-		"dotenv": "^16.0.1",
-		"express": "4.18.1",
+		"dotenv": "^16.0.3",
+		"express": "4.18.2",
 		"express-async-errors": "^3.1.1",
 		"express-session": "^1.17.3",
 		"mongoose": "^6.4.0",
-		"nodemailer": "^6.7.5",
+		"nodemailer": "^6.9.1",
 		"passport": "^0.6.0",
 		"passport-local": "^1.0.0",
-		"uuid": "^8.3.2"
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
-		"@types/cors": "^2.8.12",
-		"@types/express": "^4.17.13",
-		"@types/express-session": "^1.17.4",
-		"@types/node": "^18.0.0",
-		"@types/nodemailer": "^6.4.4",
-		"@types/passport": "^1.0.9",
-		"@types/passport-local": "^1.0.34",
-		"@types/uuid": "^8.3.4",
-		"nodemon": "^2.0.16",
-		"ts-node": "^10.8.1",
-		"typescript": "^4.7.4"
+		"@types/cors": "^2.8.13",
+		"@types/express": "^4.17.17",
+		"@types/express-session": "^1.17.6",
+		"@types/node": "^18.14.4",
+		"@types/nodemailer": "^6.4.7",
+		"@types/passport": "^1.0.12",
+		"@types/passport-local": "^1.0.35",
+		"@types/uuid": "^9.0.1",
+		"nodemon": "^2.0.20",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.9.5"
 	}
 }
