--- a/prototype/frontend/package.json
+++ b/prototype/frontend/package.json
@@ -3,9 +3,11 @@
 	"version": "0.0.0",
 	"scripts": {
 		"dev": "vite",
-		"build": "vue-tsc --noEmit && vite build",
+		"build": "vue-tsc --noEmit && vite build --outDir ../backend/src/views/frontend",
+		"build:ci": "vue-tsc --noEmit && vite build",
 		"preview": "vite preview",
-		"fmt": "prettier --write ."
+		"fmt": "prettier --write .",
+		"build:watch": "vite build --outDir ../backend/src/views/frontend --watch"
 	},
 	"dependencies": {
 		"axios": "^1.3.1",
