--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,18 +1,21 @@
 name: Docker Image CI
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
-
   build:
-
-    runs-on: ubuntu-latest
-
+    runs-on: self-hosted 
     steps:
-    - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: cd prototype && docker build . --file Dockerfile --tag bachelor:$(date +%s)
+      run: |
+        cd prototype
+        docker build . --file "prototype/Dockerfile" --tag bachelor:latest
+    
+  deploy:
+    runs-on: self-hosted 
+    steps:
+      - name: Deploy the newest Docker image
+        run: docker compose -f "prototype/docker-compose.yml" up -d
