--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: self-hosted 
     steps:
     - uses: actions/checkout@v3
+      with:
+          repository: Max-0e/bachelor
     - name: Build the Docker image
       run: docker build . --file "prototype/Dockerfile" --tag bachelor:latest
     
@@ -17,5 +19,7 @@ jobs:
     runs-on: self-hosted 
     steps:
       - uses: actions/checkout@v3
+        with: 
+          repository: Max-0e/bachelor
       - name: Deploy the newest Docker image
         run: docker compose -f "prototype/docker-compose.yml" up -d
