--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,10 +22,19 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: |
-        cd prototype
-        docker build . --file "Dockerfile" --tag bachelor:latest
+      run: 
+        cd prototype && 
+        docker build . --file "Dockerfile" --tag bachelor:latest 
+        --build-arg MONGO_PASSWORD=${{ env.MONGO_PASSWORD }}
+        --build-arg SECRET=${{ env.SECRET }}
+        --build-arg CLIENT_APP_URL=${{ env.CLIENT_APP_URL }}
+        --build-arg MONGO_DB=${{ env.MONGO_DB }}
+        --build-arg MONGO_URL=${{ env.MONGO_URL }}
+        --build-arg MONGO_USER=${{ env.MONGO_USER }}
+        --build-arg VITE_API_DOMAIN=${{ env.VITE_API_DOMAIN }}
+        --build-arg VITE_DEV_MODE=${{ env.VITE_DEV_MODE }}
   deploy:
+    needs: build
     runs-on: self-hosted
     # environment: 
     #   name: production
