idk maybe this does something

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,8 +36,17 @@ jobs:
   deploy:
     needs: build
     runs-on: self-hosted
-    # environment: 
-    #   name: production
+    environment: 
+      name: production
+    env:
+      MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
+      SECRET: ${{ secrets.SECRET }}
+      CLIENT_APP_URL: ${{ vars.CLIENT_APP_URL }}
+      MONGO_DB: ${{ vars.MONGO_DB }}
+      MONGO_URL: ${{ vars.MONGO_URL }}
+      MONGO_USER: ${{ vars.MONGO_USER }}
+      VITE_API_DOMAIN: ${{ vars.VITE_API_DOMAIN }}
+      VITE_DEV_MODE: ${{ vars.VITE_DEV_MODE }}
     steps:
       - name: Deploy the newest Docker image
         run: docker compose -f "prototype/docker-compose.ci.yml" up -d
