--- a/prototype/docker-compose.ci.yml
+++ b/prototype/docker-compose.ci.yml
@@ -6,13 +6,13 @@ services:
     restart: always
     command:
         # Uncomment for development/testing:
-        - --api.insecure=true
+        # - --api.insecure=true
         - --entrypoints.web.address=:80
         - --entrypoints.web.http.redirections.entryPoint.to=websecure
         - --entrypoints.web.http.redirections.entryPoint.scheme=https
         - --entrypoints.websecure.address=:443
         # Uncomment for development/testing:
-        - --certificatesresolvers.letsencrypt.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
+        # - --certificatesresolvers.letsencrypt.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
         - --certificatesresolvers.letsencrypt.acme.email=admin@interaction-room.de
         - --certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json
         - --certificatesresolvers.letsencrypt.acme.tlschallenge=true
