--- a/prototype/docker-compose.ci.yml
+++ b/prototype/docker-compose.ci.yml
@@ -6,14 +6,14 @@ services:
     restart: always
     command:
         # Uncomment for development/testing:
-        # - --api.insecure=true
+        - --api.insecure=true
         - --entrypoints.web.address=:80
         - --entrypoints.web.http.redirections.entryPoint.to=websecure
         - --entrypoints.web.http.redirections.entryPoint.scheme=https
         - --entrypoints.websecure.address=:443
         # Uncomment for development/testing:
-        # - --certificatesresolvers.letsencrypt.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
-        - --certificatesresolvers.letsencrypt.acme.email=admin@interaction-room.de
+        - --certificatesresolvers.letsencrypt.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
+        - --certificatesresolvers.letsencrypt.acme.email=maximilian.oedinger@hsrw.org
         - --certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json
         - --certificatesresolvers.letsencrypt.acme.tlschallenge=true
         - --providers.docker
@@ -25,8 +25,6 @@ services:
 
   api:
     image: bachelor:latest
-    ports:
-        - 3000:8080
     restart: always
     environment:
         - MONGO_PASSWORD
@@ -39,7 +37,7 @@ services:
         - VITE_DEV_MODE
     labels:
         - traefik.enable=true
-        - traefik.http.routers.bachelor.rule=Host(`bachelor`)
+        - traefik.http.routers.bachelor.rule=Host(116.203.140.167.nip.io)
         - traefik.http.routers.bachelor.entrypoints=websecure
         - traefik.http.routers.bachelor.tls.certresolver=letsencrypt
 
