--- a/prototype/Dockerfile
+++ b/prototype/Dockerfile
@@ -2,8 +2,8 @@
 # frontend
 FROM node:16-alpine as fe-build-stage
 WORKDIR /app
-ARG VITE_API_API_DOMAIN
-ARG VITE_API_DOMAINDEV_MODE
+ARG VITE_API_DOMAIN
+ARG VITE_DEV_MODE
 COPY ./frontend/package*.json .
 RUN npm ci
 COPY ./frontend/ .
