--- a/prototype/docker-compose.ci.yml
+++ b/prototype/docker-compose.ci.yml
@@ -33,11 +33,9 @@ services:
         - MONGO_DB
         - MONGO_URL
         - MONGO_USER
-        - VITE_API_DOMAIN
-        - VITE_DEV_MODE
     labels:
         - traefik.enable=true
-        - traefik.http.routers.bachelor.rule=Host(`116.203.140.167.nip.io`)
+        - traefik.http.routers.bachelor.rule=Host(`https://116.203.140.167.nip.io`)
         - traefik.http.routers.bachelor.entrypoints=websecure
         - traefik.http.routers.bachelor.tls.certresolver=letsencrypt
 
