--- a/prototype/backend/package.json
+++ b/prototype/backend/package.json
@@ -9,10 +9,12 @@
 		"fmt": "prettier --write ."
 	},
 	"dependencies": {
+		"@types/crypto-js": "^4.1.1",
 		"axios": "^1.3.4",
 		"bcrypt": "^5.1.0",
 		"connect-mongo": "^4.6.0",
 		"cors": "2.8.5",
+		"crypto-js": "^4.1.1",
 		"dotenv": "^16.0.3",
 		"express": "4.18.2",
 		"express-async-errors": "^3.1.1",
