--- a/prototype/frontend/package.json
+++ b/prototype/frontend/package.json
@@ -17,7 +17,8 @@
 		"vue-chartjs": "^5.2.0",
 		"vue-cookies": "^1.8.2",
 		"vue-router": "^4.1.6",
-		"vue-toastification": "^2.0.0-rc.5"
+		"vue-toastification": "^2.0.0-rc.5",
+		"xlsx": "https://cdn.sheetjs.com/xlsx-0.19.2/xlsx-0.19.2.tgz"
 	},
 	"devDependencies": {
 		"@types/node": "18.11.18",
