--- a/prototype/backend/package.json
+++ b/prototype/backend/package.json
@@ -23,6 +23,8 @@
 		"nodemailer": "^6.9.1",
 		"passport": "^0.6.0",
 		"passport-local": "^1.0.0",
+		"swagger-jsdoc": "^6.2.8",
+		"swagger-ui-express": "^4.6.2",
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
@@ -34,6 +36,8 @@
 		"@types/nodemailer": "^6.4.7",
 		"@types/passport": "^1.0.12",
 		"@types/passport-local": "^1.0.35",
+		"@types/swagger-jsdoc": "^6.0.1",
+		"@types/swagger-ui-express": "^4.1.3",
 		"@types/uuid": "^9.0.1",
 		"nodemon": "^2.0.20",
 		"ts-node": "^10.9.1",
