--- a/prototype/frontend/package.json
+++ b/prototype/frontend/package.json
@@ -2,7 +2,7 @@
 	"name": "frontend",
 	"version": "0.0.0",
 	"scripts": {
-		"dev": "vue-tsc && vite",
+		"dev": "vite",
 		"build": "vue-tsc --noEmit && vite build --outDir ../backend/src/views/frontend",
 		"build:ci": "vue-tsc --noEmit && vite build",
 		"preview": "vite preview",
