--- a/prototype/package.json
+++ b/prototype/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
-		"setup": "concurrently \"cd ./backend; npm i; npm run start\" \"cd ./frontend; npm i; npm run dev\"",
+		"setup": "concurrently \"cd ./backend; npm i; \" \"cd ./frontend; npm i\"",
 		"start": "concurrently \"cd ./backend; npm run start\" \"cd ./frontend; npm run dev\"",
 		"fmt": "prettier --write ."
 	},
