domain stuff and some changes

--- a/prototype/docker-compose.ci.yml
+++ b/prototype/docker-compose.ci.yml
@@ -39,7 +39,7 @@ services:
         - SMTP_PASS
     labels:
         - traefik.enable=true
-        - traefik.http.routers.bachelor.rule=Host(`116.203.140.167.nip.io`)
+        - traefik.http.routers.bachelor.rule=Host(`bachelor.oedinger.io`)
         - traefik.http.routers.bachelor.entrypoints=websecure
         - traefik.http.routers.bachelor.tls.certresolver=letsencrypt
 
